# aws-cost-guardian

./: .gitignore  README.md  aws_cost_guardian.py  cli.py  cost_engine.py  docker-compose.yml  lambda_handler.py  log_detector.py  main.tf  outputs.tf  pyproject.toml  remediation-workflow.asl.json  rules.json  variables.tf  versions.tf
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  spike-detection.md  terraform.md
docs/superpowers/plans/: 2026-06-20-floci-e2e-testing.md
docs/superpowers/specs/: 2026-06-20-floci-e2e-testing-design.md
examples/basic/: README.md  main.tf
src/: aws_cost_guardian.py  lambda_handler.py
tests/: test_audit_fixes.py  test_budget_scenarios.py
tests/e2e/: conftest.py  seeds.py  test_actual_exceeded.py  test_discovery.py  test_known_gaps.py  test_lambda_spike.py  test_projection.py  test_remediation.py  test_smoke.py
