[project]
name = "aws-cost-guardian"
version = "2.0.0"
description = "Simple POC account budget protection for AWS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.8.0",
    "boto3-stubs[ce,ec2,rds,lambda,sns,pricing]>=1.35.0",
]

[project.scripts]
aws-cost-guardian = "cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
